--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "groq-sdk": "^0.23.0",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "sqlite": "^5.1.1",
