--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node-dev --respawn src/app.ts",
     "dev": "ts-node-dev --respawn src/app.ts"
   },
   "keywords": [],
